# benchq

./: .gitignore  CODEOWNERS  Makefile  README.md  adjacency_list.nxl  bars_overlap.py  big_lanl_estimates.py  icm_output.json  juliapkg.json  logs.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup_julia.py  stuff_to_profile.py  test_orquestra.py
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_performance_tests.json  0002_performance_tests.json  0003_performance_tests.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-python-wheel-via-cicd-actions.yaml  coverage.yml  performance_test.yml  style.yml
benchmarks/: test_get_qsp_program.py  test_get_qsp_time_evolution_program.py  test_graph_sim_mini_performance.py  test_ruby_slippers_performance.py  test_substrate_scheduler_performance.py
dev/bench/: data.js
examples/: 1_from_qasm.py  3_packages_comparison.py  Feedback For IEEE Presentation.md  Peter Love Project.ipynb  adjacency_list.nxl  advanced_estimates.py  advanced_estimates_microsoft.py  estimate_small_instances.py  ex_10_lde_solver.py  ex_10_utility_scale.py  ex_11_utility_scale.py  ex_1_from_qasm.py  ex_2_gsee_of_h2.py  ex_2_time_evolution.py  ex_2_time_evolution_sdk.py  ex_3_packages_comparison.py  ex_4_extrapolation.py  ex_4_fast_graph_estimates.py  ex_6_from_qasm_mlflow.py  ex_6_mlflow.py  ex_7_mlflow.py  ex_8_subroutines.py  ex_9_lde_solver.py  generate_qasm_circuit.py  h_chain_from_qasm.py  h_chain_trotter.py  h_chain_with_substrate_scheduler.py  heisenberg.py  heisenburg.py  icm_input_circuit.json  icm_output.json  jeromes_molecules.py  juliapkg.json  molecule_simulation_from_json.py  packages_comparison.py  plot.py  plot_compilation_times.py  plot_max_graph_degree.py  plot_time_data.py  qsp_vlasov.py  (+12 more)
examples/active_volume_results/: 01_utility_scale_compilation.py
examples/benchmark_data/: Jabalizer_histogram_data_2023-10-02-19-41  Jabalizer_histogram_data_2023-10-02-19-45  Jabalizer_histogram_data_2023-10-02-20-05  graphsim_mini_histogram_data_2023-10-02-19-41  graphsim_mini_histogram_data_2023-10-02-19-42  graphsim_mini_histogram_data_2023-10-02-19-52  graphsim_mini_histogram_data_2023-10-02-20-13  graphsim_mini_histogram_data_2023-10-02-21-26  ruby_slippers_histogram_data_2023-10-02-19-40  ruby_slippers_histogram_data_2023-10-02-19-42  ruby_slippers_histogram_data_2023-10-02-19-52  ruby_slippers_histogram_data_2023-10-02-20-12  ruby_slippers_histogram_data_2023-10-02-21-20  ruby_slippers_histogram_data_2023-10-02-21-32  ruby_slippers_histogram_data_2023-10-02-22-28  ruby_slippers_histogram_data_2023-10-02-22-38  ruby_slippers_histogram_data_2023-10-02-22-47  ruby_slippers_histogram_data_2023-10-07-20-01-06  ruby_slippers_histogram_data_2023-10-07-20-01-20  ruby_slippers_histogram_data_2023-10-07-20-01-51  ruby_slippers_histogram_data_2023-10-07-20-02-52  ruby_slippers_histogram_data_2023-10-07-20-04-28  ruby_slippers_histogram_data_2023-10-07-20-07-10  ruby_slippers_histogram_data_2023-10-07-20-11-00  ruby_slippers_histogram_data_2023-10-07-20-16-59  ruby_slippers_histogram_data_2023-10-07-20-25-37  ruby_slippers_histogram_data_2023-10-07-20-39-41  ruby_slippers_histogram_data_2023-10-07-20-39-57  ruby_slippers_histogram_data_2023-10-07-20-40-28  ruby_slippers_histogram_data_2023-10-07-20-41-26  ruby_slippers_histogram_data_2023-10-07-20-43-01  ruby_slippers_histogram_data_2023-10-07-20-45-38  ruby_slippers_histogram_data_2023-10-07-20-49-46  ruby_slippers_histogram_data_2023-10-07-20-55-47  ruby_slippers_histogram_data_2023-10-07-21-03-43
examples/circuits/: connected_circuit.qasm  rotation_cnot.qasm
examples/data/: example_circuit.qasm  get_icm.py  ghz_circuit.qasm  sample_decoder_data.csv  single_rotation.qasm
examples/ex_5_orquestra/: defs.py  run.py
examples/ex_5_qsp_re_with_orquestra/: defs.py  run.py
examples/ex_6_orquestra_customized/: defs.py  run.py
examples/ex_7_remote_mlflow/: defs.py  run.py
examples/ex_8_remote_mlflow/: defs.py  run.py  test_script.py
examples/ex_8_scf_mlflow/: defs.py  run.py
examples/ex_8_subroutines/: ex_8a_gsee.py  ex_8b_ft_re.py  ex_8c_df_compilation.py
examples/ex_9_scf_mlflow/: defs.py  run.py
examples/outputs/: test.txt
examples/qasm_circuits/: ising_circuit_2_for_100.qasm  ising_circuit_3_for_100.qasm  ising_circuit_4_for_100.qasm  ising_circuit_5_for_100.qasm
examples/small_molecules/: C2H2-8-canonical_qubitop.json  C2H4-12-NOs_qubitop.json  CH4-8-NOs_qubitop.json
examples/small_qubo_instances/: example_qubo_110_variables.hdf5  example_qubo_44_variables.hdf5  example_qubo_55_variables.hdf5  example_qubo_66_variables.hdf5  example_qubo_77_variables.hdf5  to_ta15_q_matrix_B20230405_000230_num_stock_3_index_006829_pen_param_1317.501.hdf5  to_ta15_q_matrix_B20230405_001582_num_stock_4_index_006981_pen_param_239.073.hdf5  to_ta15_q_matrix_B20230405_004445_num_stock_5_index_006278_pen_param_764.132.hdf5  to_ta15_q_matrix_B20230405_004509_num_stock_6_index_005455_pen_param_389.969.hdf5
final_results/cubic-2023-09-10_13-26-14/: cubic_footprint_re_data.json  cubic_gsc_re_data.json
other_code/: Hamiltonian_Simulation_LCU.ipynb  fh_experiments.py  open_fermion_resource_estimation_wrapper.py
src/benchq/: __init__.py  timing.py  (+3 more)
(+354 files in other folders)
