[metadata]
name = benchq
description = "BenchQ platform for resource estimation"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/benchq
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum==0.9.0
    orquestra-qiskit==0.9.0
    orquestra-cirq==0.8.0
    networkx>=2.8.7
    # Used to define and run Orquestra workflows
    orquestra-sdk[all]==0.45.1
    matplotlib>=3.6
    numpy>=1.20
    more-itertools~=9.1.0
    pandas==1.5.3
    # pyLIQTR was forked to remove dependencies on cirq-rigetti which has conflicting
    # dependencies with ray (used by orquestra-sdk)
    pyLIQTR @ git+https://github.com/SebastianMorawiec/pyLIQTR_test.git@fa3a0e410ff1cf34d6d060118268a319ac793604
    openfermion~=1.5.0
    pytest # required by OpenFermion's resource_estimates module
    graph-state-generation @ git+https://github.com/sfc-aqua/gosc-graph-state-generation
    juliapkg==0.1.10
    juliacall~=0.9.10


[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
    stim==1.10
    # Used in tests
    numpy
    benchq[pyscf]

pyscf =
    pyscf==2.2.0
    openfermionpyscf==0.5

azure =
    benchq[pyscf]
    azure-quantum==0.28.262328b1
    pyqir==0.8.0
    qiskit_qir==0.3.1
    qiskit_ionq==0.3.10
