[metadata]
name = benchq
description = "BenchQ platform for resource estimation"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/benchq
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum
    orquestra-vqa==0.8.0
    orquestra-qiskit
    orquestra-cirq
    networkx>=2.8.7
    # Used to define and run Orquestra workflows
    orquestra-sdk[all]>=0.46.0
    matplotlib>=3.6
    numpy>=1.20
    more-itertools~=9.1.0
    pandas==1.5.3
    pyLIQTR @ git+https://github.com/isi-usc-edu/pyLIQTR.git
    openfermion~=1.5.0
    pytest # required by OpenFermion's resource_estimates module
    graph-state-generation @ git+https://github.com/sfc-aqua/gosc-graph-state-generation
    juliapkg==0.1.10
    juliacall~=0.9.10
    h5py~=3.8.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
    # Used in tests
    stim==1.10
    numba~=0.57.0
    benchq[pyscf]
    benchq[azure]

pyscf =
    pyscf~=2.2.0
    openfermionpyscf==0.5

azure =
    benchq[pyscf]
    azure-quantum==0.28.262328b1
    pyqir==0.8.0
    qiskit_qir==0.3.1
    qiskit_ionq==0.3.10
