[metadata]
name = benchq
description = "BenchQ platform for resource estimation"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/benchq
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9,!=3.9.7

install_requires =
    orquestra-quantum==0.12.0
    orquestra-vqa==0.9.0
    orquestra-qiskit==0.14.0
    orquestra-cirq==0.12.0
    orquestra-opt==0.10.0
    networkx>=2.8.7
    # Used to define and run Orquestra workflows
    orquestra-sdk[all]>=0.63.0
    matplotlib>=3.6
    numpy>=1.20
    more-itertools~=9.1.0
    pandas==1.5.3
    pyLIQTR==0.3.3
    openfermion[resources]~=1.6.0
    pytest # required by OpenFermion's resource_estimates module
    graph-state-generation==0.2.0
    juliapkg==0.1.10
    juliacall~=0.9.10
    h5py~=3.8.0
    mlflow~=2.3.2
    stim==1.10
    optuna==3.3.0
    cvxpy==1.3.2
    aiohttp~=3.9.0
    setuptools<=65.6.3
    UpSetPlot==0.9.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
    # Used in tests
    pytest-benchmark~=4.0.0
    numba~=0.57.0
    benchq[pyscf]
    benchq[azure]
    benchq[jabalizer]
    pyright

pyscf =
    pyscf==2.2.1
    scipy<1.11.0
    openfermionpyscf==0.5

azure =
    benchq[pyscf]
    azure-quantum==0.28.262328b1
    pyqir==0.8.0
    qiskit_qir==0.3.1
    qiskit_ionq==0.3.10

jabalizer =
    pauli_tracker
    mbqc_scheduling

[flake8]
ignore = E203,E266,F401,W503
max-line-length = 88